tweak(interface): fix FAB shadow cutoff on the right, tweak blockquoute colors, reduce contrast of control-icon colors, increase text contrast of highlighted text, adjust scope of view-header styling

--- a/src/10_colors/_dark-colors.scss
+++ b/src/10_colors/_dark-colors.scss
@@ -1,5 +1,5 @@
 .theme-dark {
-	--accent-h: 211;
+	--accent-h: 212;
 	--accent-s: 86%;
 	--accent-l: 52%;
 
@@ -119,7 +119,7 @@
 	--code-background-alt: var(--trans-strong-10);
 
 	--control-icon-background: var(--trans-faint-20);
-	--control-icon-color: color-mix(in oklab, var(--color-base-80), var(--color-base-90));
+	--control-icon-color: var(--color-base-80);
 
 	--fab-bg: var(--background-primary);
 	--fab-color: var(--icon-color);
