--- a/src/10_colors/_light-colors.scss
+++ b/src/10_colors/_light-colors.scss
@@ -1,5 +1,5 @@
 .theme-light {
-	--accent-h: 211;
+	--accent-h: 212;
 	--accent-s: 100%;
 	--accent-l: 52%;
 
@@ -104,7 +104,7 @@
 	--checkbox-border-color: var(--color-base-35);
 
 	--control-icon-background: var(--background-primary);
-	--control-icon-color: var(--color-base-90);
+	--control-icon-color: var(--color-base-80);
 
 	--fab-bg: var(--background-primary);
 	--fab-color: var(--icon-color);
