--- a/src/20_markdown/_blockquotes.scss
+++ b/src/20_markdown/_blockquotes.scss
@@ -7,8 +7,8 @@
 	padding-inline: 1.75em 0;
 }
 body:not(.enable-special-text) blockquote {
-	--bold-color: oklab(from var(--blockquote-color) l a b / 0.875);	
-	--italic-color: oklab(from var(--blockquote-color) l a b / 0.875);	
+	--bold-color: var(--blockquote-color);	
+	--italic-color: var(--blockquote-color);	
 }
 .HyperMD-quote,
 .markdown-rendered blockquote,
